<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_favorite"
        android:title="@string/text_favorite"
        app:showAsAction="always"
        android:icon="@drawable/ic_favorite_border_white"/>

</menu>