<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:title="@string/title_home"
        android:icon="@drawable/ic_menu_home"/>

    <item
        android:id="@+id/favorite"
        android:title="@string/title_favorite"
        android:icon="@drawable/ic_menu_favorite"/>
</menu>