...
        android:layout_marginVertical="4dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/gothic_a1"
        android:includeFontPadding="false"
        android:textColor="#888888"
        app:layout_constraintStart_toEndOf="@id/imgBackground"
        app:layout_constraintTop_toBottomOf="@id/tvTitleDetail"
        tools:text="Release date: 2020-12-12" />

    <TextView
        android:id="@+id/tvRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
